# Build-Your-Own-Custom-Chatbot

./: .gitignore  README.md  goodreads_2022.html  goodreads_2023.html  goodreads_2024.html  goodreads_books.csv  goodreads_books_embedded.csv  project.ipynb  pyproject.toml
